# github-copilot-billing-report

./: .gitignore  README.md  config.example.yaml  pyproject.toml
_live/: stdout.txt
copilot_aic_report/: __init__.py  __main__.py  audit_archive.py  auth.py  build_rows.py  checkpoint.py  config.py  csv_writer.py  github_client.py  ledger.py  models.py  periods.py  reconcile.py  resolve.py  run_log.py  snapshots.py  util.py
copilot_aic_report/sources/: __init__.py  aic_consumption.py  audit_log.py  billing_usage.py  identities.py  membership.py  org_billing.py  orgs.py  seats.py
tests/: test_aic_consumption.py  test_audit_archive.py  test_audit_log.py  test_auth.py  test_billing_usage.py  test_build_rows.py  test_checkpoint.py  test_config.py  test_csv_writer.py  test_github_client.py  test_identities.py  test_ledger.py  test_main_integration.py  test_membership.py  test_org_billing.py  test_orgs.py  test_periods.py  test_reconcile.py  test_resolve.py  test_run_log.py  test_seats.py  test_snapshots.py  test_util.py
